<resources>
    <string name="text_welcome_message">Welcome to Android Tutorials Hub</string>
    <string name="text_dialog_bottom_sheet">Dialog Bottom Sheet</string>
    <string name="text_expand_me">Expand Me</string>
    <string name="text_collapse_me">Collapse Me</string>
    <string name="text_expand_bottom_sheet">Expand Bottom Sheet</string>
    <string name="text_collapse_bottom_sheet">Collapse Bottom Sheet</string>
    <string name="text_hide_bottom_sheet">Hide Bottom Sheet</string>
    <string name="text_show_bottom_sheet_dialog">Show Bottom Sheet Dialog</string>
    <string name="text_select_icon">Select icon</string>
    <string name="action_settings">Setting</string>
    <string name="app_intro_accessibility">Working for Ninja2, no dirty things run in background. \n\n- Quick swipe fingerprint sensor to recents(Android M+). \n\n- Fingerprint confirm to split screen(Android N+). \n\nAbove actions will not work when fingerprint sensor encounter unrecoverable error, unfortunately. Wait record minute and try again.</string>
    <string name="app_intro_title">Instruction</string>
    <string name="dialog_bottom_reset">Reset</string>
    <string name="dialog_button_add">Add</string>
    <string name="dialog_button_allow">Allow</string>
    <string name="dialog_button_block">Block</string>
    <string name="dialog_button_cancel">Cancel</string>
    <string name="dialog_button_confirm">Confirm</string>
    <string name="dialog_button_deny">Deny</string>
    <string name="dialog_button_login">Login</string>
    <string name="dialog_button_process">Process</string>
    <string name="dialog_button_resend">Resend</string>
    <string name="dialog_message_allow_location_prefix">Allow </string>
    <string name="dialog_message_allow_location_suffix"> to access this device\'s location?</string>
    <string name="dialog_message_download_middle">, the size is about </string>
    <string name="dialog_message_download_prefix">Confirm to download </string>
    <string name="dialog_message_download_suffix">.</string>
    <string name="dialog_message_form_resubmission">Form data need resubmission, would you like to resend the data?</string>
    <string name="dialog_message_ssl_error_middle"> failed. </string>
    <string name="dialog_message_ssl_error_prefix">Secure connection to </string>
    <string name="dialog_message_wait_a_minute">Wait record minute…</string>
    <string name="hint_add_to_launcher">Label name</string>
    <string name="hint_custom_ua">Custom UA</string>
    <string name="hint_input_edit">Input pin title</string>
    <string name="hint_input_normal">Search or type URL</string>
    <string name="hint_login_password">Password</string>
    <string name="hint_login_username">Username</string>
    <string name="hint_search">Search</string>
    <string name="label_quick_options">Quick options</string>
    <string name="label_settings">Settings</string>
    <string name="label_shortcut_new_tab_long">New tab</string>
    <string name="label_shortcut_new_tab_short">New tab</string>
    <string name="label_shortcut_private_long">New private tab</string>
    <string name="label_shortcut_private_short">Private</string>
    <string name="options_background">Open tab in background</string>
    <string name="options_copy_url">Copy URL</string>
    <string name="options_download_image">Download image</string>
    <string name="options_foreground">Open tab in foreground</string>
    <string name="options_new_tab">New tab</string>
    <string name="options_private">New private tab</string>
    <string name="options_share_url">Share URL</string>
    <string name="page_menu_add_to_launcher">Add to launcher</string>
    <string name="page_menu_confirm">Confirm</string>
    <string name="page_menu_custom_ua">Custom UA</string>
    <string name="page_menu_desktop_mode">Desktop mode</string>
    <string name="page_menu_new_tab">New tab</string>
    <string name="page_menu_pin_to_homepage">Pin to homepage</string>
    <string name="page_menu_private">New private tab</string>
    <string name="page_menu_refresh">Refresh</string>
    <string name="page_menu_screenshot">Screenshot</string>
    <string name="page_menu_settings">Settings</string>
    <string name="page_menu_share_url">Share URL</string>
    <string name="page_menu_stop">Stop</string>
    <string name="preference_category_browser">Browser</string>
    <string name="preference_category_function">Function</string>
    <string name="preference_category_others">Others</string>
    <string name="preference_summary_adblock">Use hosts to block advertisement.</string>
    <string name="preference_summary_back_vibrate">Vibrate when long press back to homepage.</string>
    <string name="preference_summary_custom_user_agent">Set custom UA will replace the desktop mode.</string>
    <string name="preference_summary_enable_multiple_windows">Allow website auto open new tabs.</string>
    <string name="preference_summary_fingerprint_extension">Quick switch to recents and split screen, need to enable in system accessibility settings.</string>
    <string name="preference_summary_homepage_reverse">Sort homepage item from bottom to top.</string>
    <string name="preference_summary_screenshot">Capture webpage as picture, but has some performance cost. Need to restart application.</string>
    <string name="preference_summary_show_soft_keyboard">Auto show soft keyboard when new tab.</string>
    <string name="preference_summary_omnibox_control">Swipe omnibox left/right to switch history</string>
    <string name="preference_summary_omnibox_fixed">Disallowed omnibox nested scroll</string>
    <string name="preference_title_adblock">AdBlock</string>
    <string name="preference_title_back_vibrate">Back vibrate</string>
    <string name="preference_title_clear_cookies">Clear cookies</string>
    <string name="preference_title_clear_form_data">Clear form data</string>
    <string name="preference_title_clear_history">Clear history</string>
    <string name="preference_title_import_export_pin">Import/Export Pin</string>
    <string name="preference_title_clear_passwords">Clear passwords</string>
    <string name="preference_title_custom_user_agent">Custom UA</string>
    <string name="preference_title_enable_multiple_windows">Multiple windows</string>
    <string name="preference_title_feedback">Feedback</string>
    <string name="preference_title_fingerprint_extension">Fingerprint extension</string>
    <string name="preference_title_homepage_reverse">Homepage reverse</string>
    <string name="preference_title_licenses">Licenses</string>
    <string name="preference_title_screenshot">Show screenshot menu</string>
    <string name="preference_title_search_engine_id">Search engine</string>
    <string name="preference_title_show_soft_keyboard">Show soft keyboard</string>
    <string name="preference_title_version">Version</string>
    <string name="preference_title_omnibox_control">Omnibox Control</string>
    <string name="preference_title_omnibox_fixed">Omnibox Fixed</string>
    <string name="ssl_error_date_invalid">The date of the certificate is invalid.</string>
    <string name="ssl_error_expired">The certificate has expired.</string>
    <string name="ssl_error_idmismatch">Hostname mismatch.</string>
    <string name="ssl_error_invalid">A generic error occurred.</string>
    <string name="ssl_error_notyetvalid">The certificate is not yet valid.</string>
    <string name="ssl_error_untrusted">The certificate authority is not trusted.</string>
    <string name="toast_add_to_launcher_successful">Add %1$s to launcher</string>
    <string name="toast_camera_permission_denied">Camera permission denied</string>
    <string name="toast_clear_cookies">Clear cookies?</string>
    <string name="toast_clear_cookies_success">Clear cookies Success</string>
    <string name="toast_clear_cookies_error">Clear cookies error</string>
    <string name="toast_clear_form_data">Clear form data</string>
    <string name="toast_clear_form_data_success">Clear form data success</string>
    <string name="toast_clear_form_data_error">Clear form data error</string>
    <string name="toast_clear_history">Clear history?</string>
    <string name="toast_clear_history_success">Clear history success</string>
    <string name="toast_clear_passwords">Clear passwords?</string>
    <string name="toast_clear_passwords_success">Clear passwords success</string>
    <string name="toast_copy_url">Copy %1$s</string>
    <string name="toast_download_failed">Download failed</string>
    <string name="toast_downloading">Downloading %1$s</string>
    <string name="toast_location_permission_denied">Location permission denied</string>
    <string name="toast_pin_to_homepage">Pin %1$s</string>
    <string name="toast_record_audio_permission_denied">Record audio permission denied</string>
    <string name="toast_save_to_path">Save to %1$s</string>
    <string name="toast_screenshot_failed">Screenshot failed</string>
    <string name="toast_select_icon_failed">Select custom icon failed</string>
    <string name="toast_select_icon_size_error">Icon size must less than or equal to %1$dx%2$d</string>
    <string name="toast_storage_permission_denied">Storage permission denied</string>
    <string name="toast_export_pin_success">Export Pin success, %1$s</string>
    <string name="toast_export_pin_failed">Export Pin failed</string>
    <string name="toast_import_pin_success">Import Pin success</string>
    <string name="toast_import_pin_failed">Import Pin failed</string>
    <string name="toast_download_in_background">Start Download %1$s</string>
    <string name="toast_no_handle_application">No Handle Application</string>
    <string name="app_feedback_url">https://github.com/zhongzilu/Ninja2-Kotlin/issues</string>
    <string name="app_intro_url">http://mthli.github.io/Ninja2-Introduction</string>
    <string name="app_licenses_url">https://github.com/mthli/Ninja/blob/master/LICENSE</string>
    <string name="app_name">Ninja2</string>
    <string name="preference_key_adblock">preference_key_adblock</string>
    <string name="preference_key_back_vibrate">preference_key_back_vibrate</string>
    <string name="preference_key_clear_cookies">preference_key_clear_cookies</string>
    <string name="preference_key_clear_form_data">preference_key_clear_form_data</string>
    <string name="preference_key_clear_history">preference_key_clear_history</string>
    <string name="preference_key_import_export_pin">preference_key_import_export_pin</string>
    <string name="preference_key_clear_passwords">preference_key_clear_passwords</string>
    <string name="preference_key_custom_user_agent">preference_key_custom_user_agent</string>
    <string name="preference_key_enable_user_agent">preference_key_enable_user_agent</string>
    <string name="preference_key_enable_multiple_windows">preference_key_enable_multiple_windows</string>
    <string name="preference_key_feedback">preference_key_feedback</string>
    <string name="preference_key_fingerprint_extension">preference_key_fingerprint_extension</string>
    <string name="preference_key_homepage_reverse">preference_key_homepage_reverse</string>
    <string name="preference_key_licenses">preference_key_license</string>
    <string name="preference_key_screenshot">preference_key_screenshot</string>
    <string name="preference_key_search_engine_id">preference_key_search_engine_id</string>
    <string name="preference_key_show_soft_keyboard">preference_key_show_soft_keyboard</string>
    <string name="preference_key_version">preference_key_version</string>
    <string name="preference_key_open_in_background">preference_key_open_in_background</string>
    <string name="preference_key_first_install">preference_key_first_install</string>
    <string name="preference_key_omnibox_control">preference_key_omnibox_control</string>
    <string name="preference_key_omnibox_fixed">preference_key_omnibox_fixed</string>
</resources>