<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="260dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:paddingEnd="10dp"
    android:paddingStart="10dp"
    android:paddingTop="20dp">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@null"
        android:scaleType="centerCrop" />

    <TextView
        android:id="@+id/select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/icon"
        android:layout_centerHorizontal="true"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:text="@string/text_select_icon"
        android:textColor="@color/blue"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/select"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="@null"
        android:ellipsize="none"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center"
        android:hint="@string/hint_add_to_launcher"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:padding="5dp"
        android:singleLine="true"
        android:textColor="@color/text_primary"
        android:textColorHint="@color/text_hint"
        android:textSize="16sp" />

    <Button
        android:id="@+id/positiveBtn"
        android:layout_width="70dp"
        android:layout_height="35dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/label"
        android:background="@null"
        android:text="@string/dialog_button_add" />

    <Button
        android:id="@+id/negativeBtn"
        android:layout_width="70dp"
        android:layout_height="35dp"
        android:layout_below="@id/label"
        android:layout_toStartOf="@id/positiveBtn"
        android:background="@null"
        android:gravity="center"
        android:text="@string/dialog_button_cancel"
        android:textColor="@android:color/tertiary_text_light" />

</RelativeLayout>