<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/screenshots"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="?android:attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:text="@string/page_menu_screenshot"
        android:textColor="@color/text_primary"
        android:textSize="16sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/share_url"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="?android:attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:text="@string/page_menu_share_url"
        android:textColor="@color/text_primary"
        android:textSize="16sp"
        android:visibility="gone" />

    <Switch
        android:id="@+id/desktop_mode_switch"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="?android:attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:paddingEnd="8dp"
        android:paddingStart="16dp"
        android:text="@string/page_menu_desktop_mode"
        android:textColor="@color/text_primary"
        android:textOff="@null"
        android:textOn="@null"
        android:textSize="16sp" />

    <!--<RelativeLayout-->
    <!--android:id="@+id/desktop_mode"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="48dp"-->
    <!--android:background="?android:attr/selectableItemBackground"-->
    <!--android:paddingEnd="8dp"-->
    <!--android:paddingStart="16dp">-->

    <!--<Switch-->
    <!--android:id="@+id/desktop_mode_switch"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_alignParentEnd="true"-->
    <!--android:layout_centerInParent="true"-->
    <!--android:text="@null"-->
    <!--android:textOff="@null"-->
    <!--android:textOn="@null" />-->

    <!--<TextView-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_alignParentStart="true"-->
    <!--android:layout_centerInParent="true"-->
    <!--android:layout_toStartOf="@+id/desktop_mode_switch"-->
    <!--android:text="@string/page_menu_desktop_mode"-->
    <!--android:textColor="@color/text_primary"-->
    <!--android:textSize="16sp" />-->
    <!--</RelativeLayout>-->

    <Switch
        android:id="@+id/custom_ua_switch"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="?android:attr/selectableItemBackground"
        android:paddingEnd="8dp"
        android:paddingStart="16dp"
        android:text="@string/page_menu_custom_ua"
        android:textColor="@color/text_primary"
        android:textOff="@null"
        android:textOn="@null"
        android:textSize="16sp"
        android:visibility="gone" />

    <!--<RelativeLayout-->
    <!--android:id="@+id/custom_ua"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="48dp"-->
    <!--android:foreground="?android:attr/selectableItemBackground"-->
    <!--android:paddingEnd="8dp"-->
    <!--android:paddingStart="16dp"-->
    <!--android:visibility="gone">-->

    <!--<Switch-->
    <!--android:id="@+id/custom_ua_switch"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_alignParentEnd="true"-->
    <!--android:layout_centerInParent="true"-->
    <!--android:text="@null"-->
    <!--android:textOff="@null"-->
    <!--android:textOn="@null" />-->

    <!--<TextView-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_alignParentStart="true"-->
    <!--android:layout_centerInParent="true"-->
    <!--android:layout_toStartOf="@+id/custom_ua_switch"-->
    <!--android:text="@string/page_menu_custom_ua"-->
    <!--android:textColor="@color/text_primary"-->
    <!--android:textSize="16sp" />-->
    <!--</RelativeLayout>-->

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/divider" />

    <TextView
        android:id="@+id/new_tab"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="?android:attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:text="@string/page_menu_new_tab"
        android:textColor="@color/text_primary"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/privated"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="?android:attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:text="@string/page_menu_private"
        android:textColor="@color/text_primary"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/pin_to_homepage"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="?android:attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:text="@string/page_menu_pin_to_homepage"
        android:textColor="@color/text_primary"
        android:textSize="16sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/add_to_launcher"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="?android:attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:text="@string/page_menu_add_to_launcher"
        android:textColor="@color/text_primary"
        android:textSize="16sp"
        android:visibility="gone" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/divider" />

    <TextView
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="?android:attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:text="@string/page_menu_settings"
        android:textColor="@color/text_primary"
        android:textSize="16sp" />

</LinearLayout>
