<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="280dp"
    android:layout_height="wrap_content"
    android:paddingTop="10dp">

    <EditText
        android:id="@+id/uaEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:ellipsize="none"
        android:gravity="start"
        android:hint="@string/hint_custom_ua"
        android:imeOptions="actionDone"
        android:minLines="4"
        android:maxLines="10"
        android:padding="10dp"
        android:selectAllOnFocus="true"
        android:textColor="@color/text_primary"
        android:textColorHint="@color/text_hint"
        android:textCursorDrawable="@null"
        android:textSize="14sp" />

    <Button
        android:id="@+id/confirmBtn"
        android:layout_width="70dp"
        android:layout_height="35dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/uaEdit"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/colorPrimary"
        android:text="@string/dialog_button_confirm"
        android:textColor="#FFF" />

    <Button
        android:id="@+id/cancelBtn"
        android:layout_width="70dp"
        android:layout_height="35dp"
        android:layout_below="@id/uaEdit"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="10dp"
        android:layout_toStartOf="@id/confirmBtn"
        android:background="#EEE"
        android:text="@string/dialog_button_cancel" />
</RelativeLayout>