<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="280dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="10dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:textColor="@android:color/secondary_text_light_nodisable"
        android:visibility="gone"
        tools:text="http://www.bit100.com/"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:ellipsize="none"
        android:hint="@string/hint_login_username"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:nextFocusDown="@+id/password"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:textColor="@color/text_primary"
        android:textColorHint="@color/text_hint"
        android:textCursorDrawable="@null"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:ellipsize="none"
        android:hint="@string/hint_login_password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:textColor="@color/text_primary"
        android:textColorHint="@color/text_hint"
        android:textCursorDrawable="@null"
        android:textSize="16sp" />

    <Button
        android:id="@+id/cancelBtn"
        android:layout_width="70dp"
        android:layout_height="35dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/password"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="20dp"
        android:background="#EEE"
        android:text="@string/dialog_button_cancel" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="70dp"
        android:layout_height="35dp"
        android:layout_below="@id/password"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="10dp"
        android:layout_toStartOf="@id/cancelBtn"
        android:background="@color/colorPrimary"
        android:text="@string/dialog_button_login"
        android:textColor="#FFF" />
</RelativeLayout>